--- a/mysite/app/templates/home.html
+++ b/mysite/app/templates/home.html
@@ -2,5 +2,21 @@
 {% load static %}
 
 {% block content %}
-<h1 class="text-center">developpeur web indépendant</h1>
+<section>
+    <h1>développeur web indépendant</h1>
+</section>
+<section>
+    <h1>django - react</h1>
+</section>
+<section>
+    <h1>python - javascript</h1>
+</section>
+<section>
+    <h1>postgreSQL - sqlite3</h1>
+</section>
+<section>
+    <h1>
+        <a class="h1" href="https://github.com/dbOg7?tab=repositories">suit-moi sur github</a>
+    </h1>
+</section>
 {% endblock %}
