--- a/mysite/app/templates/index.html
+++ b/mysite/app/templates/index.html
@@ -7,9 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>django-style-css_bootstrap</title>
 
-    <!--style-->
+    <!--style css & bootstrap-->
     <link rel="stylesheet" href="{% static 'app/css/style.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'app/css/bootstrap.min.css' %}">
 </head>
 <body>
     <div class="container-fluid">
@@ -19,4 +20,5 @@
 </body>
     <!--script bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="{% static 'app/js/bootstrap.bundle.min.js' %}"></script>
 </html>
